Correct build.gradle file, fix docker compose config